# egl-1.5

./: CMakeLists.txt  README.md  rebar.config
.github/workflows/: static.yml  workflow.yml
c_src/: Makefile  active_context_map.c  active_context_map.h  command_executor.c  command_executor.h  commands_executor.c  commands_executor.h  context_map.c  context_map.h  egl.c
docs/: api-mapping.md  commands-executor.md  native-window-handle.md  opengl-context-conundrum.md  thread-safety.md
src/: egl.erl  egl_1_5.app.src  egl_1_5.erl
test/: egl_bind_query_api_test.erl  egl_choose_config_test.erl  egl_create_context_test.erl  egl_create_pbuffer_surface_test.erl  egl_destroy_surface_test.erl  egl_get_config_attrib_test.erl  egl_get_configs_test.erl  egl_get_current_surface_test.erl  egl_get_display_test.erl  egl_initialize_test.erl  egl_query_string_test.erl  egl_query_surface_test.erl  egl_surface_attrib_test.erl  test_egl.erl
